RESOLVED FIXED133419
View snapshots are sometimes taken at the wrong scale
https://bugs.webkit.org/show_bug.cgi?id=133419
Summary View snapshots are sometimes taken at the wrong scale
Tim Horton
Reported 2014-05-31 01:22:51 PDT
Sometimes (if a window created on a 2x display tries to take a snapshot after being moved to a 1x display), the snapshot comes back at the wrong size (scaled up and blurry). To work around this for now, we can re-request the snapshot with a slightly different set of options which work in this case (but won't be correct if the bug isn't happening).
Attachments
patch (2.98 KB, patch)
2014-05-31 01:29 PDT, Tim Horton
sam: review+
Radar WebKit Bug Importer
Comment 1 2014-05-31 01:23:22 PDT
Tim Horton
Comment 2 2014-05-31 01:23:38 PDT
<rdar://problem/17084993> tracks the underlying bug.
Tim Horton
Comment 3 2014-05-31 01:29:04 PDT
Tim Horton
Comment 4 2014-05-31 23:26:09 PDT
Note You need to log in before you can comment on or make changes to this bug.