View snapshots are sometimes taken at the wrong scale https://bugs.webkit.org/show_bug.cgi?id=133419 <rdar://problem/17087497>

Reviewed by Sam Weinig.

* UIProcess/API/mac/WKView.mm:
(-[WKView _takeViewSnapshot]):
Work around <rdar://problem/17084993> by re-requesting the snapshot at
kCGWindowImageNominalResolution if it was captured at the wrong scale.


Canonical link: https://commits.webkit.org/151450@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169510 268f45cc-cd09-0410-ab3c-d52691b4dbfc